@@ -26,15 +26,15 @@ import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 
+import org.eclipse.ditto.base.model.auth.AuthorizationContext;
+import org.eclipse.ditto.base.model.auth.AuthorizationSubject;
+import org.eclipse.ditto.base.model.json.JsonSchemaVersion;
 import org.eclipse.ditto.json.JsonCollectors;
 import org.eclipse.ditto.json.JsonFactory;
 import org.eclipse.ditto.json.JsonField;
 import org.eclipse.ditto.json.JsonObject;
 import org.eclipse.ditto.json.JsonObjectBuilder;
 import org.eclipse.ditto.json.JsonValue;
-import org.eclipse.ditto.base.model.auth.AuthorizationContext;
-import org.eclipse.ditto.base.model.auth.AuthorizationSubject;
-import org.eclipse.ditto.base.model.json.JsonSchemaVersion;
 
 /**
  * Default implementation of {@link UserInformation}.
@@ -68,7 +68,8 @@ public final class DefaultUserInformation implements UserInformation {
         final List<String> subjects = context.getAuthorizationSubjects()
                 .stream()
                 .map(AuthorizationSubject::getId)
-                .collect(Collectors.toList());
+                .toList();
+
         return new DefaultUserInformation(defaultSubject, subjects);
     }
 
